<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.parts.SecondPartFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/Part_Title_Style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/second_part_title" />

        <TextView
            style="@style/Text_Style"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/second_part_data1" />

        <ImageView
            style="@style/Image_Style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/part_2" />

        <TextView
            style="@style/Text_Style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/second_part_data2" />


    </LinearLayout>
</ScrollView>